--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.16",
+    "@mui/joy": "^5.0.0-beta.19",
+    "@mui/material": "^5.15.0",
+    "@mui/system": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.5",
+    "@tanstack/react-table": "^8.11.2",
+    "bulma": "^0.9.4",
     "next": "^13.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
