--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
+    "@ibm-watson/assistant-web-chat-react": "^1.1.1",
     "@mui/joy": "^5.0.0-beta.19",
     "@mui/material": "^5.15.0",
     "@mui/system": "^5.14.18",
