--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/x-data-grid": "^6.18.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.11.2",
+    "aws-amplify": "^6.0.16",
     "bulma": "^0.9.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -39,12 +40,17 @@
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^0.12.1",
+    "@aws-amplify/backend-cli": "^0.11.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
+    "aws-cdk": "^2.127.0",
+    "aws-cdk-lib": "^2.127.0",
+    "constructs": "^10.3.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
@@ -53,6 +59,6 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.3.3"
   }
 }
