--- a/package.json
+++ b/package.json
@@ -22,24 +22,31 @@
     "@mui/material": "^5.15.0",
     "@mui/system": "^5.14.18",
     "@mui/x-data-grid": "^6.18.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.11.2",
+    "@upstash/redis": "^1.28.4",
+    "add": "^2.0.6",
     "bulma": "^0.9.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.8",
+    "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.105.0-alpha.4",
+    "next": "^14.1.1",
     "next-themes": "^0.2.1",
-    "package.json": "^2.0.1",
+    "package.json": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
-    "sharp": "^0.31.3",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "sharp": "^0.33.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@iconify/react": "^4.1.1",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
