--- a/package.json
+++ b/package.json
@@ -21,58 +21,65 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.16",
     "@ibm-watson/assistant-web-chat-react": "^1.1.1",
-    "@mui/joy": "^5.0.0-beta.19",
-    "@mui/material": "^5.15.0",
-    "@mui/system": "^5.14.18",
-    "@mui/x-data-grid": "^6.18.5",
+    "@mui/material": "^5.15.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/system": "^5.15.14",
+    "@mui/x-data-grid": "^7.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.11.2",
     "@upstash/redis": "^1.28.4",
+    "add": "^2.0.6",
+    "bulma": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
     "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
+    "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.105.0-alpha.4",
     "marked": "^11.2.0",
     "next": "14.1.1",
     "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "package.json": "^0.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^5.0.1",
     "react-lite-youtube-embed": "^2.4.0",
+    "recharts": "^2.10.3",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "swiper": "^11.0.5",
-    "add": "^2.0.6",
-    "bulma": "^0.9.4",
-    "class-variance-authority": "^0.4.0",
-    "clsx": "^1.2.1",
-    "embla-carousel-react": "^8.0.0",
-    "framer-motion": "^11.0.8",
-    "lucide-react": "^0.105.0-alpha.4",
-    "package.json": "^0.0.0",
-    "recharts": "^2.10.3",
     "sharp": "^0.33.2",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@iconify/react": "^4.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/marked": "^5.0.2",
     "@types/node": "20.11.7",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
@@ -80,13 +87,6 @@
     "sharp": "0.33.1",
     "tailwind-bootstrap-grid": "^5.1.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3",
-    "@faker-js/faker": "^8.4.1",
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-    "@iconify/react": "^4.1.1",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.13.0"
+    "typescript": "^5.3.3"
   }
 }
