--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-table": "^8.11.2",
     "@upstash/redis": "^1.28.4",
     "add": "^2.0.6",
+    "aws-sdk": "^2.1589.0",
     "bulma": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
@@ -49,6 +50,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.13",
     "package.json": "^0.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -62,7 +64,8 @@
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
