--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "AlgarveVisit",
-    "base_url": "https://nextplate.netlify.app",
+    "base_url": "https://algarvevisit.com",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
@@ -9,7 +9,7 @@
     "logo_darkmode": "/images/logo-darkmode.png",
     "logo_width": "150",
     "logo_height": "27",
-    "logo_text": "Nextplate"
+    "logo_text": "AlgarveVisit"
   },
 
   "settings": {
@@ -23,7 +23,7 @@
   },
 
   "params": {
-    "contact_form_action": "#",
+    "contact_form_action": "sendEmail",
     "copyright": "Designed And Developed by [Pursuit Assistant](https://pursuitassistant.com)"
   },
 
