working site with contact us and new social icons

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -40,7 +40,7 @@
   },
 
   "metadata": {
-    "meta_author": "Themefisher",
+    "meta_trip": "Themefisher",
     "meta_image": "/images/og-image.png",
     "meta_description": "AlgarveVisit website for travellers planning to visit Algarve Portugal."
   }
