--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.105.0-alpha.4",
     "marked": "^11.2.0",
-    "next": "14.1.1",
+    "next": "^14.1.4",
     "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
