--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.11.2",
     "@upstash/redis": "^1.28.4",
+    "@vercel/analytics": "^1.2.2",
     "add": "^2.0.6",
     "aws-sdk": "^2.1589.0",
     "bulma": "^1.0.0",
@@ -72,6 +73,7 @@
     "@iconify/react": "^4.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/gtag.js": "^0.0.19",
     "@types/marked": "^5.0.2",
     "@types/node": "20.11.7",
     "@types/react": "18.2.48",
